# business-analyst-bot

./: .env.template  .gitignore  AGENTS.md  AUDIT.md  Dockerfile.node  Dockerfile.python  PLAN.md  RESOURCE_ANALYSIS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_simulate.py
conversations/: 2026-07-08.md
migrations/: env.py
migrations/versions/: 001_initial.py
registry/skills/: example_greeting.md
registry/tools/: example_tool.py
src/: config.py  dedup.py  llm.py  main.py  mem0_client.py  redis_client.py  router.py  token_tracker.py
src/admin/: routes.py
src/admin/templates/: index.html
src/agents/: business_analyst.py  coding_agent.py  skills_manager.py
src/intake/: graph.py  schema.py
src/models/: business_profile.py  token_usage.py
src/registry/: loader.py
whatsapp-bridge/: index.js  package.json
